beast-k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: testing
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: testing
spec:
  type: loadbalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: node-app
