beast-k8s/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: testing
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: testing
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: testing
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: node-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-app
  namespace: testing
spec:
  serviceName: "node-app"
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: 107534347551.dkr.ecr.ap-south-1.amazonaws.com/node-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: ecr-secret
